[package]
name = "weighted-rs-wasm"
version = "0.1.3"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "README.md"
description = "A libray for weighted balancing algorithm."
repository = "https://github.com/nhtera/weighted-rs"
documentation = "https://docs.rs/weighted-rs/"
homepage = "https://crates.io/crates/weighted-rs"
keywords = ["weight", "weighted", "balancing"]
categories = ["algorithms"]
edition = "2018"

[dependencies]
